# gutenberg2kindle

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
gutenberg2kindle/: __init__.py  cli.py  config.py  email.py  gutenberg.py
tests/: test_cli.py  test_config.py  test_email.py  test_gutenberg.py  test_gutenberg2kindle.py
