[tool.poetry]
name = "gutenberg2kindle"
version = "0.1.0"
description = "A small Python tool to download and send ebooks from Project Gutenberg to a Kindle email address via SMTP"
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/aitorres/gutenberg2kindle"
keywords = [
    "python",
    "cli",
    "ebooks",
    "kindle",
    "gutenberg",
    "project gutenberg"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Communications :: File Sharing",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aitorres/gutenberg2kindle/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
