[tool.poetry]
name = "gutenberg2kindle"
version = "0.7.1"
description = "A small Python tool to download and send ebooks from Project Gutenberg to a Kindle email address via SMTP"
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/aitorres/gutenberg2kindle"
keywords = [
    "python",
    "cli",
    "ebooks",
    "kindle",
    "gutenberg",
    "project gutenberg"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Communications :: File Sharing",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aitorres/gutenberg2kindle/issues"
"Change Log" = "https://github.com/aitorres/gutenberg2kindle/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
usersettings = "^1.1.5"
requests = "^2.32.5"

[tool.poetry.dev-dependencies]
pre-commit = "^4.5.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pylint = "^4.0.4"
isort = "^7.0.0"
types-requests = "^2.32.4.20250913"
types-usersettings = "^1.1.0.0"

[tool.isort]
src_paths = ["gutenberg2kindle", "tests"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length=90

[tool.poetry.scripts]
gutenberg2kindle = "gutenberg2kindle.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
